--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
     "clsx": "^2.1.1",
+    "markdown-it": "^14.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "lodash-es": "^4.17.21",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
