--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/lodash-es": "^4.17.12",
     "clsx": "^2.1.1",
-    "markdown-it": "^14.1.0",
+    "marked": "^12.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
